Modification of the structure of the package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@16 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NAMESPACE
+++ b/pkg/gmm/NAMESPACE
@@ -5,7 +5,7 @@ export(HAC,gmm,weightsAndrews2,bwAndrews2,summary.gmm,rho,smoothG,getDat,bwNewey
 	residuals.gmm, fitted.gel, residuals.gel, plot.gmm, plot.gel,formula.gmm, formula.gel, charStable, specTest, 
 	specTest.gmm, specTest.gel, print.specTest, momentEstim.baseGmm.twoStep, momentEstim.baseGmm.twoStep.formula,
         momentEstim.baseGmm.iterative.formula, momentEstim.baseGmm.iterative, momentEstim.baseGmm.cue.formula, 
-	momentEstim.baseGmm.cue, getModel.baseGmm, FinRes.baseGmm.res)
+	momentEstim.baseGmm.cue, getModel.baseGmm, getModel.baseGel, FinRes.baseGmm.res, momentEstim.baseGel.mod, momentEstim.baseGel.modFormula)
  
 S3method(summary, gmm)
 S3method(summary, gel)
@@ -32,11 +32,14 @@ S3method(specTest, gel)
 S3method(print, specTest)
 S3method(FinRes, baseGmm.res)
 S3method(getModel, baseGmm)
+S3method(getModel, baseGel)
 S3method(momentEstim, baseGmm.twoStep)
 S3method(momentEstim, baseGmm.twoStep.formula)
 S3method(momentEstim, baseGmm.iterative.formula)
 S3method(momentEstim, baseGmm.iterative)
 S3method(momentEstim, baseGmm.cue.formula)
 S3method(momentEstim, baseGmm.cue)
+S3method(momentEstim, baseGel.mod)
+S3method(momentEstim, baseGel.modFormula)
 
 
