--- a/pkg/gmm/NAMESPACE
+++ b/pkg/gmm/NAMESPACE
@@ -7,9 +7,11 @@ export(gmm,summary.gmm,rho,smoothG,getDat,summary.gel,getLamb,gel, estfun.gmmFct
 	residuals.gmm, fitted.gel, residuals.gel, plot.gmm, plot.gel,formula.gmm, formula.gel, charStable, specTest, 
 	specTest.gmm, specTest.gel, print.specTest, momentEstim.baseGmm.twoStep, momentEstim.baseGmm.twoStep.formula,
         momentEstim.baseGmm.iterative.formula, momentEstim.baseGmm.iterative, momentEstim.baseGmm.cue.formula, 
-	momentEstim.baseGmm.cue, getModel.baseGmm, getModel.baseGel, FinRes.baseGmm.res, momentEstim.baseGel.mod, momentEstim.baseGel.modFormula)
+	momentEstim.baseGmm.cue, getModel.baseGmm, getModel.baseGel, FinRes.baseGmm.res, momentEstim.baseGel.mod, 
+	momentEstim.baseGel.modFormula,tsls,summary.tsls, print.summary.tsls)
  
 S3method(summary, gmm)
+S3method(summary, tsls)
 S3method(summary, gel)
 S3method(print, gmm)
 S3method(print, summary.gmm)
@@ -22,6 +24,7 @@ S3method(plot, gmm)
 S3method(formula, gmm)
 S3method(print, gel)
 S3method(print, summary.gel)
+S3method(print, summary.tsls)
 S3method(coef, gel)
 S3method(vcov, gel)
 S3method(confint, gel)
