--- a/pkg/gmm/DESCRIPTION
+++ b/pkg/gmm/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gmm
 Version: 1.4-0
-Date: 2012-04-16
+Date: 2012-05-24
 Title: Generalized Method of Moments and Generalized Empirical
         Likelihood
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
@@ -12,8 +12,8 @@ Description: It is a complete suite to estimate models based on moment
         methods that belong to the Generalized Empirical Likelihood
         (GEL) family of estimators, as presented by Smith(1997),
         Kitamura(1997), Newey-Smith(2004) and Anatolyev(2005).
-Depends: R (>= 2.10.0), sandwich, multicore
-Suggests: mvtnorm, car, fBasics, MASS, timeDate, timeSeries
+Depends: R (>= 2.10.0), sandwich
+Suggests: mvtnorm, car, fBasics, MASS, timeDate, timeSeries, gmmExtra
 Imports: stats
 License: GPL (>= 2)
 
