Replaced fBasics by stabledist
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@61 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/DESCRIPTION
+++ b/pkg/gmm/DESCRIPTION
@@ -13,7 +13,7 @@ Description: It is a complete suite to estimate models based on moment
         (GEL) family of estimators, as presented by Smith(1997),
         Kitamura(1997), Newey-Smith(2004) and Anatolyev(2005).
 Depends: R (>= 2.10.0), sandwich
-Suggests: mvtnorm, car, fBasics, MASS, timeDate, timeSeries
+Suggests: mvtnorm, car, stabledist, MASS, timeDate, timeSeries
 Imports: stats
 License: GPL (>= 2)
 
