--- a/pkg/gmmExtra/DESCRIPTION
+++ b/pkg/gmmExtra/DESCRIPTION
@@ -5,8 +5,8 @@ Title: Extra tools for GMM estimation
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Tools for GMM such as additional tests or robust confidence regions. They only apply to gmm class object for the gmm package.
-Depends: R (>= 2.10.0), gmm (>= 1.4), multicore
-Suggests: mvtnorm, car, fBasics, MASS, timeDate, timeSeries
+Depends: R (>= 2.10.0), gmm (>= 1.4), parallel
+Suggests: mvtnorm, car, stabledist, MASS, timeDate, timeSeries
 Imports: stats
 License: GPL (>= 2)
 
