--- a/pkg/gmmExtra/NAMESPACE
+++ b/pkg/gmmExtra/NAMESPACE
@@ -1,9 +1,10 @@
 import(stats)
 importFrom(car, linearHypothesis)
 
-export(KConfid, bootGmm, plot.bootGmm, summary.bootGmm, bootJ, linearHypothesis.bootGmm)
+export(KConfid, bootGmm, plot.bootGmm, summary.bootGmm, bootJ, linearHypothesis.bootGmm, print.bootGmm)
 
 S3method(plot, bootGmm)
+S3method(print, bootGmm)
 S3method(summary, bootGmm)
 S3method(linearHypothesis, bootGmm)
  
