Fixed bugs from last change and worked in gmmExtra
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@76 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmmExtra/NAMESPACE
+++ b/pkg/gmmExtra/NAMESPACE
@@ -1,5 +1,7 @@
 import(stats)
-importFrom(car, linearHypothesis)
+importFrom(car, linearHypothesis, makeHypothesis, printHypothesis)
+importFrom(parallel, mclapply)
+importFrom(gmm, gmm, specTest, gmmWithConst, KTest)
 
 export(KConfid, bootGmm, plot.bootGmm, summary.bootGmm, bootJ, linearHypothesis.bootGmm, print.bootGmm)
 
