partially fixed the check errors in gmmExtra
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@99 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmmExtra/NAMESPACE
+++ b/pkg/gmmExtra/NAMESPACE
@@ -2,6 +2,7 @@ import(stats)
 importFrom(car, linearHypothesis, makeHypothesis, printHypothesis)
 importFrom(parallel, mclapply)
 importFrom(gmm, gmm, specTest, gmmWithConst, KTest)
+importFrom(graphics, plot)
 
 export(KConfid, bootGmm, plot.bootGmm, summary.bootGmm, bootJ, linearHypothesis.bootGmm, print.bootGmm)
 
