--- a/pkg/gmmExtra/DESCRIPTION
+++ b/pkg/gmmExtra/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: gmmExtra
 Version: 0.0-3
 Date: 2017-06-13
-Title: Extra tools for GMM estimation
+Title: Methods for Generalize Method of Moments Estimation
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Tools for GMM such as additional tests or robust confidence regions. They only apply to gmm class object for the gmm package.
-Depends: R (>= 2.10.0), gmm (>= 1.5), parallel, car
+Depends: R (>= 2.10.0), gmm (>= 1.6-2), parallel, car
 Suggests: mvtnorm, stabledist, MASS, timeDate, timeSeries
 Imports: stats
 License: GPL (>= 2)
