--- a/pkg/gmmExtra/DESCRIPTION
+++ b/pkg/gmmExtra/DESCRIPTION
@@ -5,8 +5,7 @@ Title: Methods for Generalize Method of Moments Estimation
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Tools for GMM such as additional tests or robust confidence regions. They only apply to gmm class object for the gmm package.
-Depends: R (>= 2.10.0), gmm (>= 1.6-2), parallel, car
-Suggests: mvtnorm, stabledist, MASS, timeDate, timeSeries
+Depends: R (>= 2.10.0), gmm (>= 1.6-2), car, parallel
 Imports: stats
 License: GPL (>= 2)
 
