start adding all GEL classes and methods
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@130 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/DESCRIPTION
+++ b/pkg/gmm4/DESCRIPTION
@@ -15,7 +15,7 @@ Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
         'summaryGmm-methods.R' 'gmmWeights-methods.R' 'gmmModel.R'
         'rGmmModel-methods.R' 'hypothesisTest-methods.R'
         'sysGmmModel.R' 'sysGmmModels-methods.R' 'rsysGmmModels-methods.R'
-	'sgmmfit-methods.R' 'gmm4.R'
+	'sgmmfit-methods.R' 'gmm4.R' 'gel.R' 'gelModels-methods.R'
 License: GPL (>= 2)
 NeedsCompilation: no
 VignetteBuilder: knitr
