change all class definitions to be more flexible
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@133 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/NAMESPACE
+++ b/pkg/gmm4/NAMESPACE
@@ -22,12 +22,12 @@ exportClasses("nonlinearGmm", "linearGmm", "functionGmm", "gmmModels",
               "numericORcharacter", "tsls", "rnonlinearGmm", "rfunctionGmm",
               "slinearGmm", "snonlinearGmm", "sysGmmModels",
               "sgmmfit","stsls", "rslinearGmm", "rsnonlinearGmm", "rsysGmmModels",
-              "formulaGmm","rfunctionGmm", "gelfit")
+              "formulaGmm","rfunctionGmm", "gelfit", "summaryGel")
 exportMethods(residuals, print, show, vcovHAC, coef, vcov, bread, summary, update,
               model.matrix, hypothesisTest, "[", merge, subset)
 
 export(gmmModel, evalMoment, Dresiduals, evalDMoment, momentVcov, estfun.gmmFct,
-       evalWeights, quadra, evalObjective, solveGmm, momentStrength,evalGmm, 
+       evalWeights, quadra, evalObjective, solveGmm, momentStrength,evalModel, 
        tsls, modelFit, meatGmm, specTest, gmm4, restGmmModel, modelResponse, DWH,
        modelDims, printRestrict, getRestrict, sysGmmModel, ThreeSLS, gelModel,
        rhoET, rhoEL, rhoEEL, rhoHD, EL.Wu, getLambda, gmmToGel, smoothGel,
