added clustered weighting matrix using meatCL of the sandwich package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@137 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/NAMESPACE
+++ b/pkg/gmm4/NAMESPACE
@@ -10,7 +10,7 @@ importFrom("stats", "ar", "as.formula", "model.matrix","vcov",
            "fitted", "lm.fit", "pchisq", "pnorm", "printCoefmat", "anova",
            "model.frame", "reformulate", "formula", "nlminb", "kernapply",
            "constrOptim", "kernel")
-importFrom("sandwich", "vcovHAC", "estfun","kernHAC",
+importFrom("sandwich", "vcovHAC", "estfun","kernHAC","vcovCL", "meatCL",
            "bread","bwAndrews","bwNeweyWest","weightsAndrews",
            "weightsLumley", "vcovHC")
 ### S4 Methods and Classes
