added an algorithm to restrict the implied probabilities for CUE to be non negative, converted Wu method in Fortran
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@139 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NAMESPACE
+++ b/pkg/gmm/NAMESPACE
@@ -1,3 +1,4 @@
+useDynLib(gmm)
 import(stats)
 importFrom(sandwich, estfun, bread, kernHAC, weightsAndrews, vcovHAC, bwAndrews, meatHC)
 importFrom(methods, is)
