registered fortran routines
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@140 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NAMESPACE
+++ b/pkg/gmm/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(gmm)
+useDynLib(gmm, .registration = TRUE, .fixes="F_")
 import(stats)
 importFrom(sandwich, estfun, bread, kernHAC, weightsAndrews, vcovHAC, bwAndrews, meatHC)
 importFrom(methods, is)
