small vignette update, one bug fix for formulaGmm
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@141 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/DESCRIPTION
+++ b/pkg/gmm4/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: gmm4
 Version: 0.0-2
-Date: 2018-05-29
+Date: 2019-10-09
 Title: S4 Generalized Method of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
-Description: Here is a complete restructured Gmm package using S4 only type of
+Description: Here is a complete restructured GMM package using S4 only type of
 	     classes and methods. It is in a very early stage and suggestions are
 	     welcome. See the vignette for more details.
-Depends: R (>= 2.10.0), sandwich
+Depends: R (>= 3.0.0), sandwich
 Imports: stats, methods
 Suggests: lmtest, knitr, texreg
 Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
@@ -20,4 +20,4 @@ Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
 License: GPL (>= 2)
 NeedsCompilation: no
 VignetteBuilder: knitr
-Packaged: 2018-06-14 04:40:03 UTC; pierre
+Packaged: 2019-10-09 04:40:03 UTC; pierre
