--- a/pkg/gmm4/DESCRIPTION
+++ b/pkg/gmm4/DESCRIPTION
@@ -4,9 +4,7 @@ Date: 2019-10-09
 Title: S4 Generalized Method of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
-Description: Here is a complete restructured GMM package using S4 only type of
-	     classes and methods. It is in a very early stage and suggestions are
-	     welcome. See the vignette for more details.
+Description: This is a complete restructured version of the 'gmm' package (Chausse 2010; <doi:10.18637/jss.v034.i11>) using S4 only type of classes and methods. It provides tools for estimating single equations and system of equations using the Generalized Method of Moments (Hansen 1982; <doi:10.2307/1912775>). It is in a very early stage and suggestions are welcome. See the vignette for more details.
 Depends: R (>= 3.0.0), sandwich
 Imports: stats, methods
 Suggests: lmtest, knitr, texreg
@@ -20,4 +18,3 @@ Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
 License: GPL (>= 2)
 NeedsCompilation: no
 VignetteBuilder: knitr
-Packaged: 2019-10-09 04:40:03 UTC; pierre
