adding the first draft of the package causalGel and adding fortran source codes for some algorithm in gmm4
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@143 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/DESCRIPTION
+++ b/pkg/gmm4/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gmm4
-Version: 0.0-2
-Date: 2019-10-09
+Version: 0.0-3
+Date: 2019-10-17
 Title: S4 Generalized Method of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
@@ -16,5 +16,5 @@ Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
 	'sgmmfit-methods.R' 'gmm4.R' 'gel.R' 'gelModels-methods.R'
 	'gelfit-methods.R'
 License: GPL (>= 2)
-NeedsCompilation: no
+NeedsCompilation: yes
 VignetteBuilder: knitr
